fix: fixed horizontal scroll and gap issue

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -288,24 +288,10 @@ input[type="number"] {
 
 // For testimonial slider on homepage
 
-// .gfIymu {
-// 	display: flex;
-// 	align-items: stretch;
-// }
-
-.sc-dlnjPT {
-	display: flex;
-	align-items: stretch;
-}
-
-// .OqKff {
-//     align-items: stretch;
-//     display: flex;
-// }
-
 .sc-bdnylx {
     align-items: stretch;
-    display: flex !important;
+	display: inline-flex !important;
+	height: 100%;
 }
 
 .loader {
